5043030: (reflect) unnecessary object creation in reflection
Use valueOf() instead of new for primitive wrappers.

Reviewed-by: jfranck